feat: get user avatar (#171)
